[project]
name = "zsuite"
version = "0.2.1"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["zsuite"]
#include-package-data = true
##zip-safe = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}


[build-system]
requires = ["setuptools", "ruff", "tox", "pytest"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py310"

line-length = 120
indent-width = 4
respect-gitignore = true
show-fixes = true
exclude = ["tests/test_import.py"]

[tool.ruff.lint]
extend-select = [
    "UP",  #pyupgrade
    "B", #bugbear
    "I",  #isort
    #"D",  #pydocstyle
    "SIM",  #simplify
]
extend-fixable = ["B"]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"




[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

# this is left here as we transition to ruff from black in IDEs
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''